Data added to edit form submit button

--- a/Resources/views/Admin/edit.html.twig
+++ b/Resources/views/Admin/edit.html.twig
@@ -44,7 +44,7 @@
             {{ form_rest(form) }}
             <hr />
             <p>
-                <button class="radius button" type="submit">{{ 'admin.action.save'|trans }}</button>
+                <button class="radius button" type="submit" data-test-edit-form-submit>{{ 'admin.action.save'|trans }}</button>
             </p>
         </form>
     </div>
