--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -13,6 +13,18 @@
 {% endspaceless %}
 {% endblock form_row %}
 
+{% block form_errors %}
+{% spaceless %}
+    {% if errors|length > 0 %}
+    <ul class="errors">
+        {% for error in errors %}
+            <li data-test-form-error>{{ error.message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+{% endspaceless %}
+{% endblock form_errors %}
+
 {% block form_label %}
 {% spaceless %}
     {% if label is not sameas(false) %}
