Admin templates updated with latest ZURB Foundation (4.3.1) and Chosen (1.0.0). Filter is now shown in a pop-up for a better use of space in lists.

--- a/Resources/assets/scss/_foundation-mods.scss
+++ b/Resources/assets/scss/_foundation-mods.scss
@@ -48,7 +48,7 @@ textarea {
     margin-bottom: $base-padding;
     
     @media #{$small} {
-        margin-bottom: $column-gutter;
+        margin-bottom: $base-padding * 1.5;
     }
 }
 
@@ -96,6 +96,14 @@ hr {
     &.dark {
         border-color: $hr-dark-color;
     }
+}
+
+//
+// Panel
+//
+
+.panel {
+    padding: $base-padding;
 }
 
 //
