--- a/Resources/views/Admin/layout.html.twig
+++ b/Resources/views/Admin/layout.html.twig
@@ -4,7 +4,7 @@
 {% block stylesheets %}
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,700' rel='stylesheet' type='text/css'>
     {% stylesheets
-        "@IllarraCoreBundle/Resources/assets/vendor/chosen/chosen/chosen.css"
+        "@IllarraCoreBundle/Resources/assets/vendor/chosen-1.0.0/chosen.css"
         "@IllarraCoreBundle/Resources/assets/vendor/jquery-ui-1.10.1/css/smoothness/jquery-ui-1.10.1.custom.css"
         "@IllarraCoreBundle/Resources/assets/css/admin.css"
         "@IllarraCoreBundle/Resources/assets/css/ie8.css"
@@ -25,10 +25,11 @@
         "@IllarraCoreBundle/Resources/assets/js/vendor/custom.modernizr.js"
         "@IllarraCoreBundle/Resources/assets/js/foundation/foundation.js"
         "@IllarraCoreBundle/Resources/assets/js/foundation/foundation.topbar.js"
+        "@IllarraCoreBundle/Resources/assets/js/foundation/foundation.dropdown.js"
         "@IllarraCoreBundle/Resources/assets/js/foundation/foundation.section.js"
         "@IllarraCoreBundle/Resources/assets/js/foundation/foundation.reveal.js"
         "@IllarraCoreBundle/Resources/assets/js/foundation/foundation.tooltips.js"
-        "@IllarraCoreBundle/Resources/assets/vendor/chosen/chosen/chosen.jquery.js"
+        "@IllarraCoreBundle/Resources/assets/vendor/chosen-1.0.0/chosen.jquery.js"
         "@IllarraCoreBundle/Resources/assets/js/base.js"
         "@IllarraCoreBundle/Resources/assets/vendor/jquery-ui-1.10.1/development-bundle/ui/jquery.ui.core.js"
         "@IllarraCoreBundle/Resources/assets/vendor/jquery-ui-1.10.1/development-bundle/ui/jquery.ui.widget.js"
